updated report on movie data analysis

--- a/Analysis on Movies Data.ipynb
+++ b/Analysis on Movies Data.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 158,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -717,7 +717,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3eba6746a7d4ce5a0c68438469088e2",
+       "model_id": "074263eef2b3438f93067908c1421b0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -731,7 +731,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba049533eaed4509b3e0e84300681ae8",
+       "model_id": "4fae63df1807433f8ec80a91bde2deef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -745,7 +745,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6277f5db4804a908494f5f210530791",
+       "model_id": "f5f8291938ce4b2f90a0a5060de55b26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -759,7 +759,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9719bea249da44e2bb62cba7de080e1a",
+       "model_id": "a329eaabbe5542d6bcc8759d479e9dde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "Name: Revenue, Length: 1000, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
        "3   60545   270.32       59.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 156,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1073,7 +1073,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6066434f54524f3592c81fc136d165a3",
+       "model_id": "9d9600cbbe494aa1b9563b1ef6552a2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1087,7 +1087,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5d7e332d107462983fa1bc283f3caa1",
+       "model_id": "0d36661e7b3447be9304b9c962177b63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1101,7 +1101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "967e050a8a0547dc993f2c501f9ac839",
+       "model_id": "4bf366bb0d65453a99ddd46bb19717e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1115,7 +1115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de5a918b22324185935072261587f7b7",
+       "model_id": "6c668cea748b4f488c8eb03ac19bc9ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1230,6 +1230,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Top 10 movie as per Revenue"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {},
@@ -1259,6 +1266,13 @@
     "plt.tight_layout()\n",
     "plt.savefig(\"revenuetop10movie\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Least 10 movie as per Revenue"
    ]
   },
   {
@@ -1294,11 +1308,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Movie Making as per Year"
+   ]
   },
   {
    "cell_type": "code",
